# winboom

./: .gitignore  CMakeLists.txt  LICENSE  README.md  toolchain-win32.cmake  toolchain-win64.cmake
scripts/: build.sh
src/: winboom.cpp
